add block for sripts

--- a/server/server/templates/server/base.html
+++ b/server/server/templates/server/base.html
@@ -211,6 +211,8 @@
                 </div>
             {% endblock %}
 
+            {% block page_scripts %}
+            {% endblock %}
         </body>
     {% endblock %}
 </html>
