--- a/server/server/templates/server/includes/inc_product.html
+++ b/server/server/templates/server/includes/inc_product.html
@@ -4,8 +4,8 @@
    class="product_unit
           {% if status == 'new' %}product_unit_new{% endif %}
           {% if status == 'hot' %}product_unit_hot{% endif %}">
-    {% if image %}
-        <img src="{{ image.url }}" alt={{ name }}>
+    {% if image_url %}
+        <img src="{{ image_url }}" alt={{ name }}>
     {% else %}
         <img src="{% static 'products/img/default.png' %}" alt={{ name }}>
     {% endif %}
