--- a/server/main/templates/main/index.html
+++ b/server/main/templates/main/index.html
@@ -9,7 +9,7 @@
         {% for _ in ''|rjust:3 %}
             {% for product in products %}
                 {% if product.status == 'new' %}
-                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
+                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image_url=product.image.url name=product.name price_now=product.price_now price_old=product.price_old %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
@@ -22,7 +22,7 @@
         {% for _ in ''|rjust:3 %}
             {% for product in products %}
                 {% if product.status == 'hot' %}
-                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
+                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image_url=product.image.url name=product.name price_now=product.price_now price_old=product.price_old %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
@@ -36,7 +36,7 @@
         {% for _ in ''|rjust:3 %}
             {% for product in products %}
                 {% if product.status == 'sale' %}
-                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
+                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image_url=product.image.url name=product.name price_now=product.price_now price_old=product.price_old %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
