--- a/server/products/templates/categories/detail.html
+++ b/server/products/templates/categories/detail.html
@@ -30,7 +30,7 @@
         {# Вместо category.product_set.all используем category.category.all, т.к. #}
         {# в модели Product в поле category стоит related_name='category' #}
         {% for product in category.category.all %}
-            {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
+            {% include 'server/includes/inc_product.html' with id=product.id status=product.status image_url=product.image.url name=product.name price_now=product.price_now price_old=product.price_old %}
         {% endfor %}
     </div>
 {% endblock %}
