--- a/server/products/templates/products/index.html
+++ b/server/products/templates/products/index.html
@@ -41,7 +41,7 @@
             <a href="/products/${ id }/"
                 class="product_unit
                     ${ status === 'new' ? 'product_unit_new' : ''}
-                    ${ status === 'hot' ? 'product_unit_hot' : ''}
+                    ${ status === 'hot' ? 'product_unit_hot' : ''}">
                 <img src="${ image_url }" alt="${ name }">
                 <div class="product_unit_name">
                     ${ name }
