--- a/server/main/templates/main/index.html
+++ b/server/main/templates/main/index.html
@@ -7,9 +7,9 @@
     </div>
     <div class="content_right_product">
         {% for _ in ''|rjust:3 %}
-            {% for product in products %}
+            {% for product in obj %}
                 {% if product.status == 'new' %}
-                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image_url=product.image.url name=product.name price_now=product.price_now price_old=product.price_old %}
+                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
@@ -20,9 +20,9 @@
     </div>
     <div class="content_right_product">
         {% for _ in ''|rjust:3 %}
-            {% for product in products %}
+            {% for product in obj %}
                 {% if product.status == 'hot' %}
-                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image_url=product.image.url name=product.name price_now=product.price_now price_old=product.price_old %}
+                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
@@ -34,9 +34,9 @@
 
     <div class="content_right_product">
         {% for _ in ''|rjust:3 %}
-            {% for product in products %}
+            {% for product in obj %}
                 {% if product.status == 'sale' %}
-                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image_url=product.image.url name=product.name price_now=product.price_now price_old=product.price_old %}
+                    {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
                 {% endif %}
             {% endfor %}
         {% endfor %}
