--- a/server/products/templates/products/index.html
+++ b/server/products/templates/products/index.html
@@ -6,8 +6,8 @@
         Каталог
     </div>
     <div class="content_right_product">
-        {% for product in products %}
-            {% include 'server/includes/inc_product.html' with id=product.id status=product.status image_url=product.image.url name=product.name price_now=product.price_now price_old=product.price_old %}
+        {% for product in obj %}
+            {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
         {% endfor %}
     </div>
     <button id="load-button">Показать все</button>
