--- a/server/server/templates/server/includes/inc_category.html
+++ b/server/server/templates/server/includes/inc_category.html
@@ -5,7 +5,7 @@
     {% if image %}
         <img src="{{ image.url }}" alt={{ name }}>
     {% else %}
-        <img src="{% static 'products/img/default.png' %}" alt={{ name }}>
+        <img src="/media/products_images/default.png" alt={{ name }}>
     {% endif %}
     <div class="product_unit_name">
         {{ name }}
