--- a/server/products/templates/categories/detail.html
+++ b/server/products/templates/categories/detail.html
@@ -3,20 +3,22 @@
 
 {% block content_right %}
     <div class="content_right_header">
-        {{ category.name }}
+        {{ obj.name }}
     </div>
     <div class="product_img_and_short_description">
-        <a href="{{ category.image.url }}" target="_blank">
-            {% if category.image %}
-                <img src="{{ category.image.url }}" alt={{ category.name }} class="game_image">
-            {% else %}
-                <img src="{% static 'products/img/default.png' %}" alt={{ category.name }} class="game_image">
-            {% endif %}
-        </a>
+        {% if obj.image %}
+            <a href="{{ obj.image.url }}" target="_blank">
+                <img src="{{ obj.image.url }}" alt={{ obj.name }} class="game_image">
+            </a>
+        {% else %}
+            <a href="/media/products_images/default.png" target="_blank">
+                <img src="/media/products_images/default.png" alt={{ obj.name }} class="game_image">
+            </a>
+        {% endif %}
         <div class="product_short_description_wrap">
             <h2 class="product_header">Описание категории</h2>
             <p class="product_short_description">
-                {{ category.description|safe }}
+                {{ obj.description|safe }}
             </p>
         </div>
     </div>
@@ -24,13 +26,13 @@
     <br>
 
     <div class="content_right_header">
-        Игры из категории "{{ category.name }}"
+        Игры из категории "{{ obj.name }}"
     </div>
     <div class="content_right_product">
-        {# Вместо category.product_set.all используем category.category.all, т.к. #}
+        {# Вместо obj.product_set.all используем obj.category.all, т.к. #}
         {# в модели Product в поле category стоит related_name='category' #}
-        {% for product in category.category.all %}
-            {% include 'server/includes/inc_product.html' with id=product.id status=product.status image_url=product.image.url name=product.name price_now=product.price_now price_old=product.price_old %}
+        {% for product in obj.category.all %}
+            {% include 'server/includes/inc_product.html' with id=product.id status=product.status image=product.image name=product.name price_now=product.price_now price_old=product.price_old %}
         {% endfor %}
     </div>
 {% endblock %}
