obj -> object (зарезервированное имя в DetailView и DeleteView)

--- a/server/products/templates/products/detail.html
+++ b/server/products/templates/products/detail.html
@@ -3,22 +3,22 @@
 
 {% block content_right %}
     <div class="content_right_header">
-        {{ obj.name }}
+        {{ object.name }}
     </div>
     <div class="product_img_and_short_description">
-        {% if obj.image %}
-            <a href="{{ obj.image.url }}" target="_blank">
-                <img src="{{ obj.image.url }}" alt={{ obj.name }} class="game_image">
+        {% if object.image %}
+            <a href="{{ object.image.url }}" target="_blank">
+                <img src="{{ object.image.url }}" alt={{ object.name }} class="game_image">
             </a>
         {% else %}
             <a href="/media/products_images/default.png" target="_blank">
-                <img src="/media/products_images/default.png" alt={{ obj.name }} class="game_image">
+                <img src="/media/products_images/default.png" alt={{ object.name }} class="game_image">
             </a>
         {% endif %}
         <div class="product_short_description_wrap">
             <h2 class="product_header">Описание товара</h2>
             <p class="product_short_description">
-                {{ obj.short_description|safe }}
+                {{ object.short_description|safe }}
             </p>
             <a href="#" class="buy">Купить</a>
         </div>
@@ -26,11 +26,11 @@
 
     <h2 class="product_header">Характеристики товара</h2>
     <ul class="product_features">
-        {{ obj.specifications|safe }}
+        {{ object.specifications|safe }}
     </ul>
 
     <h2 class="product_header">Подробное описание товара</h2>
     <div class="product_full_description">
-        {{ obj.description|safe }}
+        {{ object.description|safe }}
     </div>
 {% endblock %}
