--- a/server/accounts/templates/accounts/delete.html
+++ b/server/accounts/templates/accounts/delete.html
@@ -3,11 +3,11 @@
 
 {% block content_right %}
     <div class="content_right_header">
-        Удаление пользоватлея "{{ name }}"
+        Удаление пользоватлея "{{ object.username }}"
     </div>
     <form method="POST">
         {% csrf_token %}
-        <span>Пользователь "{{ name }}" будет удален без возможности восстановления. Удалить пользователя?</span>
+        <span>Пользователь "{{ object.username }}" будет удален без возможности восстановления. Удалить пользователя?</span>
         <br>
         <input type="submit">
     </form>
